# sdszk-qa

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  code_reading.md  main.py  package-lock.json  pyproject.toml  pyrightconfig.json  tasks.md  数据库字段重命名迁移方案.md  生产部署指南.md  部署前准备工作.md  部署计划与进度.md  鲁韵思政大模型建设方案_v1.0_对外版.docx  鲁韵思政大模型建设方案_详细版_最终版.docx  鲁韵思政改造任务清单.md
.github/: INDEX.md
.github/agents/: backend-delivery.agent.md  codex-workflow.agent.md  copilot-workflow.agent.md  frontend-delivery.agent.md
.github/hooks/: stop-confirmation.json
.github/instructions/: backend.instructions.md  codex-customization.instructions.md  codex.instructions.md  copilot-customization.instructions.md  frontend.instructions.md  infra.instructions.md  testing.instructions.md
.github/workflows/: ci.yml
SKILLS/: README.md
SKILLS/catalog/: backend.yaml
SKILLS/metadata/: ownership.md  skills.json
archive/: FRONTEND_OPTIMIZATION.md  ServerB-basic-info.md  开发计划.md  随机病例模式开发清单.md
src/cases/: case_001_patriotism.json  case_001_uri.json  case_002_gastroenteritis.json  case_002_rule_of_law.json  case_003_hypertension.json  (+7 more)
tests/: conftest.py  test_config.py  test_diagnostic_rules.py  test_evaluation_gate.py  test_integration.py  test_intents_parser.py  test_no_scoring_paths.py  test_professional_input.py  test_prompt_builder.py  test_rate_limit.py  test_retrieval_gateway.py  test_scoring.py  test_security_boundaries.py  test_security_hardening.py  test_seed_cases.py  test_spot_check.py  test_workbench_integration.py  test_workbench_services.py
(+163 files in other folders)
