[project]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "sqlalchemy>=2.0.25",
  "greenlet>=3.0.3",
  "alembic>=1.13.1",
  "httpx>=0.26.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.1.0",
  "pyjwt>=2.8.0",
  "psycopg[binary]>=3.1.17",
  "minio>=7.2.3",
  "python-multipart>=0.0.6",
  "passlib[bcrypt]>=1.7.4",
  "loguru>=0.7.2",
  "asyncpg>=0.31.0",
  "slowapi>=0.1.9",
  "vllm>=0.13.0; sys_platform != 'darwin'",
]
description = "鲁韵思政大模型问答系统 - 基于 vLLM + FastAPI"
name = "luyun-sizheng"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.3",
  "pytest-asyncio>=0.21.1",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.9",
  "mypy>=1.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["ANN401"]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "C4", "PT"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_classes = "Test*"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = ["tests"]

[tool.mypy]
disallow_untyped_defs = false
ignore_missing_imports = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
